--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -23,6 +23,7 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section { display: block; }
@@ -3774,16 +3775,76 @@ h2#see-more-matches {
     height: 460px;
     overflow: hidden;
 }
-#profile .info {
+#profile-info {
+    padding: 10px;
+}
+#profile-info-top {
+    border-bottom: 1px solid lightgray;
+    padding-bottom: 10px;
+}
+
+#profile-picture-block {
     position: relative;
-    margin: 0 !important;
-    height: 250px;
-    width: 100%;
-    background-color: rgb(239, 239, 239);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: 0 0;
+    height: 73px;
+    width: 73px;
+    margin: 12px;
+}
+#profile-picture {
     background-image: url(../images/discovery/noPhotoAvailable.png);
+    background-color: rgb(239, 239, 239);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: 0 0;
+    border-radius: 40px;
+    height: 100%;
+    width: 100%;
+}
+#profile-picture-block .circle {
+    background-color: rgba(0, 201, 218, 1);
+    border: 3px solid white;
+    border-radius: 50px;
+    text-align: center;
+    position: absolute;
+    line-height: 43px;
+    font-weight: bold;
+    font-size:17px;
+    height: 45px;
+    color: white;
+    right: -25px;
+    width: 45px;
+    top: -10px;
+}
+#follow-info {
+    margin-top: 35px;
+    float: right;
+    width: 200px;
+}
+#follow-info li {
+    display: inline-block;
+    text-align: center;
+    width: 31%;
+}
+#follow-info li b {
+    font-weight: bold;
+    font-size: 20px;
+}
+#follow-info li p {
+    font-size: 13px;
+    color: lightgray;
+    font-weight: 100;
+}
+#profile-info-bottom {
+    font-size: 14px;
+}
+#profile-info-bottom div {
+    color:rgb(93, 93, 93);
+    padding: 5px 0;
+}
+#name {
+    font-weight: bold;
+}
+#action-buttons {
+    margin: 10px 0;
 }
 #settings-gear {
     position: absolute;
@@ -3792,7 +3853,7 @@ h2#see-more-matches {
     right: 3px;
     top: 3px;
 }
-#profile .info.msPop { background-image: url(https://s3.amazonaws.com/trailerpop/images/MsPop/fakeMsPop_large.png) !important; }
+#profile-picture.msPop { background-image: url(https://s3.amazonaws.com/trailerpop/images/MsPop/fakeMsPop_large.png) !important; }
 .avatar.msPop { background-image: url(https://s3.amazonaws.com/trailerpop/images/MsPop/fakeMsPop.png) !important; }
 #profile .info .location {
     position: absolute;
@@ -4023,7 +4084,7 @@ h2#see-more-matches {
     text-align: center;
     font-size: 16px;
     line-height: 32px;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 .feed-item .activity-feed-buttons .follow.following,
 .follow-button.following {
@@ -4041,21 +4102,21 @@ h2#see-more-matches {
     background-position: 2px 4px;
     background-size: 23px 15px;
 }
-#profile .action-buttons .button.follow,
-#profile .action-buttons .button.greeting {
-    width: 140px;
-    float: left;
-    margin: 10px 0 10px 10px;
+#profile #action-buttons .button.follow,
+#profile #action-buttons .button.greeting {
     border: 2px solid #C0322F;
+    display: inline-block;
+    line-height: 36px;
+    width: 140px;
 }
 .feed-item .button.greeting,
-#profile .action-buttons .button.greeting {
+#profile #action-buttons .button.greeting {
     background-image: url(../images/discovery/icon_greeting.png);
     background-size: 20px 19px;
     background-position: 24px 7px;
     background-repeat: no-repeat;
 }
-#profile .action-buttons .button.greeting.greeted { background-image: none !important; }
+#profile #action-buttons .button.greeting.greeted { background-image: none !important; }
 #profile .button.follow { background-color: #C0322F; }
 #profile .button.following {
     color: #C0322F;
@@ -4217,7 +4278,7 @@ h2#see-more-matches {
 
 
 
-#profile .circle, 
+
 .percent-in-common,
 .follow-compatibility,
 .match .match-compatibility,
@@ -4231,7 +4292,7 @@ h2#see-more-matches {
     color: white;
     text-align: center;
 }
-#profile .circle .percent,
+
 .compatibility-inner .percent {
     font-size:22px;
     font-weight: bold;
@@ -4880,7 +4941,12 @@ h6.like-you + .action {
     overflow: hidden;
     background-color: rgb(225,225,225);
 }
-#notifications-container.open { display: block; }
+#notifications-container.open::-webkit-scrollbar { display: none; }
+#notifications-container.open { 
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
+    display: block; 
+}
 #notifications-container .notification {
     overflow: hidden;
     border-bottom: 1px solid #EBEBEB;
