--- a/platforms/ios/www/templates/profile.html
+++ b/platforms/ios/www/templates/profile.html
@@ -1,62 +1,61 @@
+<% var msPop = userID === '252990' ? true : false; %>
+
 <div id="profile" class="bgwhite<% if(!userID) { %> owner<% } %>">
     <div class="profile-scroll-content cf">
-        <div class="info<% if(userID == '252990') { %> msPop<% } %>" <% if(profileData.facebookID) { %>style="background-image: url(https://graph.facebook.com/<%= profileData.facebookID %>/picture?height=380&width=320);"<% } %>>
-            <% if(self) { %><img id="settings-gear" src="images/discovery/settings.png" /><% } %>
-            <% if(userID != '252990') { %>
-                <% if(moviesInCommon[0].compatibility && moviesInCommon[0].compatibility != "0") { %>
-                <div class="outer">
-                    <div class="circle">
-                        <div class="percent"><%= moviesInCommon[0].compatibility %>%</div>
-                        <div class="match">MATCH</div>
-                    </div>
-                </div>
-                <% } %>
-            <% } %>
-            <% if(fbImages.length > 0) { %>
-                <% $("#profile .info").css("background-image", "none"); $("#profile .info").css("background-color", "#EFEFEF"); %>
-                <div id="side-swipe" style="background-color: #EFEFEF;">
-                    <% _.each(fbImages, function(image) { %>
-                        <div class="contain" style="background-image: url(<%= image.source %>)"></div>
-                    <% }); %>
-                </div>
-            <% } %>
-        </div>
+        <div id="profile-info">
+            <div id="profile-info-top">
+                <div id="profile-picture-block" class="inlineb">
+                    <div id="profile-picture" class="<% if(msPop) { %>msPop<% } %>" <% if(profileData.facebookID) { %>style="background-image: url(https://graph.facebook.com/<%= profileData.facebookID %>/picture?height=80&width=80);"<% } %>></div>
+                    <% if(!msPop) { %>
+                        <% if(moviesInCommon[0].compatibility && moviesInCommon[0].compatibility != "0") { %>
 
-        <div class="bio">
-            <div class="name"><%= profileData.uName %><% if(profileData.age && parseInt(profileData.age) > 18) { %>, <%= profileData.age %><% } %></div>
-            <% if(profileData.city) { %>
-                <div class="location"><%= profileData.city %></div>
-            <% } %>
-        </div>
-
-        <% if(!self && userID != "252990") { %>
-            <div class="action-buttons">
-                <div id="follow-button" class="button follow<% if(following) { %> following <% } %>">Follow<% if(following) { %>ing<% } %></div>
-                <div id="send-greeting" class="button greeting<% if(isFriend || parseInt(messageCount[0].messageCount) > 0) { %> greeted<% } %>" data-messagecount="<%= messageCount[0].messageCount %>">
-                    <% if(isFriend || parseInt(messageCount[0].messageCount) > 0) { %>
-                        Message
-                    <% } else { %>
-                        Say Hi
+                            <div class="circle">
+                                <div class="percent"><%= moviesInCommon[0].compatibility %>%</div>
+                            </div>
+                        <% } %>
                     <% } %>
                 </div>
+                <ul id="follow-info" class="inlineb">
+                    <li id="friends">
+                        <b><%= followData.friends.count %></b>
+                        <p>Friends</p>
+                    </li>
+                    <li id="followers">
+                        <b><%= followData.followers.count %></b>
+                        <p>Followers</p>
+                    </li>
+                    <li id="following">
+                        <b><%= followData.following.count %></b>
+                        <p>Following</p>
+                    </li>
+                </ul>
             </div>
-        <% } %>
+            <div id="profile-info-bottom">
+                <div id="name"><%= profileData.uName %>
+                    <% if(profileData.age && parseInt(profileData.age) > 18 && !self) { %>, <%= profileData.age %><% } %>
+                </div>
+                <% if(profileData.city) { %> 
 
-        <% if(userID != "252990") { %>
-        <div id="follow-data" class="sub-header">
-            <div class="fl">
-                <h4 class="following"><%= followData.following.count %> Following</h4>
-            </div>
-            <div class="fl">
-                <h4><%= followData.followers.count %> Followers</h4>
+                    <div id="location"><%= profileData.city %></div> 
+
+                <% } %>
+                <% if(!self && !msPop) { %>
+                    <ul id="action-buttons">
+                        <li id="follow-button" class="button follow<% if(following) { %> following <% } %>">Follow<% if(following) { %>ing<% } %></li>
+                        <li id="send-greeting" class="button greeting<% if(isFriend || parseInt(messageCount[0].messageCount) > 0) { %> greeted<% } %>" data-messagecount="<%= messageCount[0].messageCount %>">
+                            <% if(isFriend || parseInt(messageCount[0].messageCount) > 0) { %>
+                                Message
+                            <% } else { %>
+                                Say Hi
+                            <% } %>
+                        </li>
+                    </ul>
+                <% } %>
             </div>
         </div>
-        <% } %>
-
-        <div id="lists" class="lists-nav">Lists</div>
-        <div id="feed" class="lists-nav">Recent Activity</div>
 
         <div id="top-genres"></div>
         <div id="favorite-delta"></div>
     </div>
 </div>
+
