--- a/platforms/ios/www/templates/coach.html
+++ b/platforms/ios/www/templates/coach.html
@@ -6,6 +6,11 @@
 			classes : 'category-select',
 			arrow : false,
 		}, 
+		explore : {
+			text :  "Add more to your list by exploring fun packs",
+			classes : 'category-select',
+			arrow : "&#8595;",
+		}, 
 		fabricMenu : {
 			text : "Use the Fabric menu to filter the app by a specific category",
 			classes : 'fabric-menu',
@@ -24,6 +29,11 @@
 		finishSwipe : {
 			text : "Let's finish swiping before viewing the details screen",
 			classes : 'finish-swipe',
+			arrow : false,
+		},
+		post : {
+			text : "Post about something you're into right now to start a conversation",
+			classes : "post",
 			arrow : false,
 		}
 	};
