--- a/platforms/ios/www/templates/searchStatusUpdate.html
+++ b/platforms/ios/www/templates/searchStatusUpdate.html
@@ -1,5 +1,6 @@
+<h1 id='mcdonalds'>What are you loving today</h1>
 <form id="status-update-search">
-	<input id='status-update-input' type='text' placeholder='Pick a movie, TV show, song etc'>
+	<input id='status-update-input' type='text' placeholder='Pick a movie, TV show, song etc' />
 </form>
 <div id="search-wrapper">
 	<div id="search-results"></div>
