--- a/platforms/ios/www/templates/coach.html
+++ b/platforms/ios/www/templates/coach.html
@@ -2,12 +2,12 @@
  
 	var text = {
 		categorySelect : {
-			text :  "Build your want-to list by swiping fun movie, travel, TV, and music packs!  <br /><br />Here are some popular ones to start with.",
+			text :  "Looking for new TV shows, movies and music? Wonder who shares your taste?<br /><br />Tell us what you love and we’ll connect you.",
 			classes : 'category-select',
 			arrow : false,
 		}, 
 		explore : {
-			text :  "Add more to your list by exploring fun packs",
+			text :  "Explore more fun packs to keep building your want-to list",
 			classes : 'category-select',
 			arrow : "&#8595;",
 		}, 
